update all script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NodeJS Project with Express Mysql",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -13,9 +13,7 @@
   "keywords": [
     "node",
     "sequelize",
-    "mysql",
-    "body-parser",
-    "cors"
+    "mysql"
   ],
   "author": "ekopurnama25",
   "license": "ISC",
@@ -24,10 +22,12 @@
   },
   "homepage": "https://github.com/ekopurnama25/node-express-mysql#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
+    "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^6.1.1"
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
